[project]
name = "market-analyst"
version = "0.1.0"
description = "Multi-agent Indian stock market analyst (LangGraph + FastAPI + Streamlit)"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2",
  "langchain>=0.3",
  "langchain-google-genai>=2.0",
  "yfinance>=0.2.40",
  "ddgs>=9.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "streamlit>=1.38",
  "pandas>=2.2",
  "ta>=0.11",
  "cachetools>=5.5",
  "httpx>=0.27",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-mock>=3.14",
  "pytest-cov>=5.0",
  "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "frontend/tests"]
pythonpath = ["frontend"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
